@@ -3235,11 +3235,11 @@
 (ert-deftest compat-untrusted-content ()
   (should (local-variable-if-set-p 'untrusted-content)))
 
-(ert-deftest compat-trusted-files ()
+(ert-deftest compat-trusted-content ()
   (static-if (< emacs-major-version 30) ;; TODO reenable on Emacs 30
       (progn
-        (should (boundp 'trusted-files))
-        (should (risky-local-variable-p 'trusted-files)))))
+        (should (boundp 'trusted-content))
+        (should (risky-local-variable-p 'trusted-content)))))
 
 (ert-deftest compat-trusted-content-p ()
   (static-if (< emacs-major-version 30) ;; TODO reenable on Emacs 30
@@ -3251,11 +3251,11 @@
         (let ((buffer-file-truename (expand-file-name "compat-tests.el")))
           (should-not (trusted-content-p)))
         (let ((buffer-file-truename (expand-file-name "compat-tests.el"))
-              (trusted-files '("compat-tests.el")))
+              (trusted-content '("compat-tests.el")))
           (should (trusted-content-p)))
         (let ((untrusted-content t)
               (buffer-file-truename (expand-file-name "compat-tests.el"))
-              (trusted-files '("compat-tests.el")))
+              (trusted-content '("compat-tests.el")))
           (should-not (trusted-content-p))))))
 
 (provide 'compat-tests)
